--- a/package.json
+++ b/package.json
@@ -4,20 +4,32 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "@types/react": "^15.0.23",
+    "@types/react-dom": "^15.5.0",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-native-modules": "^6.6.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "babel-runtime": "^6.9.0",
     "flux": "^2.1.1",
     "history": "^1.17.0",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
+    "mobx-react-devtools": "^4.2.11",
     "react": "^0.14.9",
-    "react-dom": "^0.14.6",
+    "react-dom": "^0.14.9",
     "react-router": "^1.0.3",
+    "ts-loader": "^0.8.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.16.5"
   },
