--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "es5",
         "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true,
         "sourceMap": true,
         "allowJs": true,
         "experimentalDecorators": true,
-        "outDir": "build",
+        "outDir": "src",
         "jsx": "react"
     },
     "exclude": [
