--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-	"babel-plugin-transform-runtime": "^6.9.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^6.9.0",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.16.5",
+    "mobx-react-devtools": "^4.2.11",
     "ts-loader": "^0.8.2",
     "typescript": "^2.3.2",
-    "mobx-react-devtools": "^4.2.11"
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.16.5"
   },
   "scripts": {
     "dev": "webpack-dev-server --port 24028 --content-base src --inline --hot"
