--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,13 @@
         "allowJs": true,
         "experimentalDecorators": true,
         "outDir": "src",
-        "jsx": "react"
+        "jsx": "react",
+        "baseUrl": ".",
+        "paths": {
+            "utils": [
+                "./src/utils.js"
+            ]
+        }
     },
     "exclude": [
         "node_modules"
