--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^6.9.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "copy-webpack-plugin": "^4.0.1",
+    "html-webpack-harddisk-plugin": "^0.1.0",
+    "html-webpack-plugin": "^2.28.0",
     "mobx-react-devtools": "^4.2.11",
     "ts-loader": "^0.8.2",
     "typescript": "^2.3.2",
