--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "ts-loader": "^2.0.3",
     "typescript": "^2.3.2",
     "webpack": "^2.5.0",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-merge": "^4.1.0"
   },
   "scripts": {
-    "dev": "webpack-dev-server --port 24028 --content-base src --inline --hot",
-    "prd": "webpack -p --progress --profile --colors"
+    "dev": "webpack-dev-server --env=dev --port 24028 --content-base src --inline --hot",
+    "prd": "webpack -p --env=prd --progress --profile --colors"
   },
   "author": "",
   "license": "ISC"
